--- a/24care.html
+++ b/24care.html
@@ -35,7 +35,7 @@
   <div class="">
     <nav class="navbar navbar-expand-lg" style="">
       <div class="container-fluid">
-        <a href="" class="navbar-brand">
+        <a href="index.html" class="navbar-brand">
           <img class="imgnav" src="images/clhcfinallonglogowhite.png" height="50" alt="CLHC">
         </a>
         <button type="button" class="animate__animated animate__flipInX navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -62,50 +62,70 @@
       </div>
     </nav>
     <img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="" class="cover-image">
-    <div class="con2" style="color: #77c9e6; background-color:; padding:; padding-bottom: 2rem;">
+    <div class="con2" style="color: #77c9e6; background-color:; padding:; padding-bottom:;">
       <!--<h1 class="display-4" style="padding-top: 4%; text-align: center; color: #77c9e6; font-size: 2rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">
         Caregiver Jobs</h1>-->
       <br>
-      <h1 class="text-center" style="padding: 3% 15% 0 15%; font-size: 1.7rem; color: #133544; font-weight: 700;">Respite Care<h1>
-          <h4 class="display-4" style="padding: 1% 15% 0 15%; text-align: left; color: #272727; font-size: 1rem;
-          font-family: 'Quicksand', sans-serif; font-weight: 500;">hhhhhh
-          </h4>
+      <h1 class="text-center" style="padding: 0 15% 0 15%; font-size: 1.7rem; color: #133544; font-weight: 700;">
+        24 Hour Care</h1>
+      <h4 class="display-4" style="padding: 1% 15% 0 15%; text-align: left; color: #272727; font-size: 1rem;
+          font-family: 'Quicksand', sans-serif; font-weight: 500;">
+          If a 24-hour home care is desired, we have you covered. we work with you and your loved one to create an
+          individualized plan of care.<br><br>
+            <span style="font-weight: 700;">Who Benefits From 24-Hour Care?</span><br><br>
+            Our trusted staff assists individuals who require complex care regardless of age range. We offer a fully
+            comprehensive and personalized care plan for people experiencing specific health issues, including the following:<br><br>
+            ⮕ Recovery from a heart attack, stroke, or other serious illness.<br>
+            ⮕ Severely injured individuals with limited mobility and increased care needs.<br>
+            ⮕ Seniors experiencing cognitive decline or serious complications due to mental, physical, or age-related disorders.<br>
+            ⮕ Individuals recovering from major surgery, chemotherapy, or other medical treatment.<br><br>
+        </h4><br><br>
 
+        <h4 style="margin-bottom: 0; padding: 6% 15% 4% 15%; color: black; background: url('https://i.ibb.co/GW0XVfS/bgbgbgbgbg.png'); text-align: left; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
+          <span style="font-weight: 700;">Your loved one may require 24-hour care if you have noticed the following:</span><br><br>
+        <ul>
+        <li>Decreased mobility/difficulty getting around.</li>
+        <li>Injuries due to falls and accidents.</li>
+        <li>Inability to eat or drink unassisted.</li>
+        <li>Cognitive decline.</li>
+        <li>Difficulty completing daily tasks without assistance.</li>
+        </ul></h4>
+        <br><br>
 
-          <div style="padding: 5% 15% 4% 15%; background: url('https://i.ibb.co/GW0XVfS/bgbgbgbgbg.png');" class="col-sm">
+        <h4 class="display-4" style="padding: 1% 15% 0 15%; text-align: left; color: #272727; font-size: 1rem;
+            font-family: 'Quicksand', sans-serif; font-weight: 500;"><span style="font-weight: 700;">
+            If a 24-hour home care is desired, we have you covered. we work with you and your loved one to create an
+            individualized plan of care.</span><br><br>
+              <span style="font-weight: 500;">Our caregivers can help take some of the pressure of primary caregivers by
+                providing 24-hour care that ensures your loved one’s physical, mental, and emotional needs are met by
+                providing the following:</span><br><br>
+              ⮕ Assistance with tasks of daily living like dressing, walking, eating, and hygiene-related activities.<br>
+              ⮕ Providing social stimulation and companionship.<br>
+              ⮕ Keeping an eye out for changes to health status or other issues that may need to be reported to the family or medical team.<br>
+              ⮕ Individuals recovering from major surgery, chemotherapy, or other medical treatment.<br><br>
+          </h4><br><br>
+          <h4 class="display-4" style="padding: 0 15% 0 15%; text-align: left; color: #272727; font-size: 1rem;
+              font-family: 'Quicksand', sans-serif; font-weight: 500;"><span style="font-weight: 700;">
+              Your loved one may require 24-hour care if you have noticed the following:</span><br><br>
+                ⮕ Decreased mobility.<br>
+                ⮕ Injuries due to falls and accidents.<br>
+                ⮕ Inability to eat or drink unassisted.<br>
+                ⮕ Anxiety, depression, or other mental health issues related to feelings of isolation.<br>
+                ⮕ Cognitive decline.<br>
+                ⮕ Difficulty completing daily tasks without assistance.
+            </h4><br><br>
+
+          <div style="padding: 5% 15% 4% 15%; background: url('https://i.ibb.co/nqpgJm7/CLHC-banners-plai.png');" class="col-sm  text-center">
             <br>
-            <h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center; color: black; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight:400;">
-              Are you interested in starting your career with us today? Contact us by filling the form below and we will be back in touch with you shortly.</h4>
-
-            <section class="sectiontop">
-              <div class="container" style="color: black; font-weight:;">
-                <form action="https://formspree.io/f/xzboqdyp" method="POST" id="my-form">
-
-                  <div class="form-group">
-                    <label for="firstName"> Name</label>
-                    <input type="text" id="firstName" name="firstName">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="latsName">Phone number</label>
-                    <input type="text" id="lastName" name="lastName">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="message">Message:</label>
-                    <textarea name="message" id="message" cols="30" rows="5"></textarea>
-                  </div>
-
-                  <button type="submit" style="font-weight: 700;">Submit</button>
-                </form>
-              </div>
-              <div id="status"></div>
-            </section>
+            <h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center;
+            color: white; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight:700;">
+              Are you interested in our Home Health Aide services? Click the 'Contact us' button below for more information or call us now on (+717-824-7199).</h4>
+              <br><a href="contactus.html" class="btn btn-md contactusbtn text-center" role="button" aria-disabled="true"
+              style="border: 4px solid white;
+              border-radius: 25px; color: white;
+              font-family: 'Quicksand', sans-serif; font-weight: 700; color: white !important;" class="btn">&nbsp;&nbsp;
+              Contact us&nbsp;</a>
+              <br><br>
           </div>
 
           <!--<footer class="footer fixed-bottom text-center" style="color: white; background-color: #3d4122;">
@@ -115,7 +135,7 @@
             <div class="">
               <div class="row">
                 <div class="col-sm-12 col-md-6" style="font-weight: 700; color: white; padding-top: 6%; padding-right: 2%;">
-                  <h4 style="font-weight: 700; font-size: 1.2rem;">24 Hours Caregivers</h4>
+                  <h4 style="font-weight: 700; font-size: 1.2rem;">About</h4>
                   <p class="" style="font-weight: 200; font-size: 0.8rem;">Comfort loving Home Care, an agency focusing in home care in Lancaster, Pennsylvania, can be your
                     partner in rebuilding your future by helping you recover from a recent illness that requires monitoring.
                     We will help you deal with the stresses of healing; and as for family caregivers, we will assist you and
@@ -125,22 +145,21 @@
                 <div class="col-xs-6 col-md-3" class="col-sm-12 col-md-6" style="font-weight:; color: white; padding-top: 4%;">
                   <h6 style="font-weight: 700; font-size: 1.2rem; color: #79dcff;">&nbsp;Categories</h6>
                   <ul class="footer-links">
-                    <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/aboutus.html">About Us</a></li>
-                    <li style="font-weight:; color: white;"><a href="">Contact Us</a></li>
-                    <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/services.html">Services</a></li>
-                    <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/homecare.html">Career</a></li>
-                    <li style="font-weight:; color: white;"><a href="">Blogs</a></li>
+                    <li style="font-weight:; color: white;"><a href="aboutus.html">About Us</a></li>
+                    <li style="font-weight:; color: white;"><a href="contactus.html">Contact Us</a></li>
+                    <li style="font-weight:; color: white;"><a href="services.html">Services</a></li>
+                    <li style="font-weight:; color: white;"><a href="homecare.html">Career</a></li>
+                    <li style="font-weight:; color: white;"><a href="blog.html">Blogs</a></li>
                   </ul>
                 </div>
 
                 <div class="col-xs-6 col-md-3" class="col-sm-12 col-md-6" style="font-weight:; color: white; padding-top: 4%;">
                   <h6 style="font-weight: 700; font-size: 1.2rem; color: #79dcff">&nbsp;Quick Links</h6>
                   <ul class="footer-links">
-                    <li><a href="">Respite Care</a></li>
-                    <li><a href="">Homekeeping</a></li>
-                    <li><a href="">Companionship Care</a></li>
-                    <li><a href="">Medication Reminder</a></li>
-                    <li><a href="">Meal Preparation</a></li>
+                    <li><a href="respitecare.html">Respite Care</a></li>
+                    <li><a href="hha.html">Home Health Aide</a></li>
+                    <li><a href="companionship.html">Companionship Care</a></li>
+                    <li><a href="24care.html">24 Hour Caregivers</a></li>
                   </ul>
                 </div>
               </div>
@@ -151,10 +170,21 @@
                 <p class="copyright-text" style="font-weight: 700; color: white; padding-bottom: 4%;">Copyright &copy; 2022 All Rights Reserved by
                   <a href="#">Comfort Loving Homecare</a>.
                 </p>
-                <p>324 North Queen Street,<br>Marietta, Lancaster County, PA,<br> Pennsylvenia, USA</p>
+                <p>324 North Queen Street,<br>Marietta, Lancaster County, PA,<br> Pennsylvenia, USA<br>Tel: +717-824-7199</p>
+                <br>
+                <a href="https://www.facebook.com/comfortlovinghc">
+                  <i style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-facebook"></i></a>
+                <a href="https://mobile.twitter.com/comfortlovinghc">
+                  <i style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-twitter"></i></a>
+                <a href="https://www.linkedin.com/company/comfort-loving-home-care/">
+                  <i style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/comfortlovinghc/">
+                  <i style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-instagram"></i></a>
+                <a href="https://www.comfortlovinghomecare.com/">
+                  <i style="color: #79dcff; padding-right: 2%;" class="fa-solid fa-2x fa-earth-americas"></i></a>
               </div>
               <div class="col justify-right">
-                <iframe
+                <iframe class="mapmobile"
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3052.930152817749!2d-76.58311668511665!3d40.07697008415748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c89bc7ab713b29%3A0x10d8377a8885e2d5!2sN%20Queen%20St%2C%20Maytown%2C%20PA%2017547%2C%20USA!5e0!3m2!1sen!2suk!4v1667959344362!5m2!1sen!2suk"
                   width="420" height="180" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
